--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
 <head>
     <title>Solar Wind</title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 </head>
 <body>
-  
+    <style>
+        h1 {
+            rgb(50,100,150);
+        }
+
+        p {
+            rgb(290,5,50);
+        }
+    </style>
     <h1> Welcome</h1>
     </p>
-    <p>testing testing
+    <p>
+        testing testing
     </p>
 </body>
 </html>
